--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
-  "name": "macmaster",
-  "version": "0.0.0",
-  "private": true,
+  "name": "vue-crud-course-code",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 4173",
+    "test:unit": "vitest run --environment jsdom",
+    "test:coverage": "vitest run --environment jsdom --coverage",
+    "test:ui": "vitest --environment jsdom --coverage --ui",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "axios": "^1.3.6",
-    "bootstrap": "^5.2.3",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "axios": "^0.27.2",
+    "pinia": "^2.0.20",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "openapi-typescript-codegen": "^0.24.0",
-    "vite": "^4.1.4"
+    "@pinia/testing": "^0.0.14",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "@vue/test-utils": "^2.0.2",
+    "axios-mock-adapter": "^1.21.1",
+    "c8": "^7.12.0",
+    "eslint": "^8.5.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "jsdom": "^20.0.0",
+    "vite": "^3.0.1",
+    "vitest": "^0.18.1"
   }
 }
