--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-crud-course-code",
+  "name": "macmasterfront",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
@@ -11,6 +11,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.15",
+    "@vue/apollo-composable": "^4.0.0-beta.5",
+    "@vue/apollo-option": "^4.0.0-beta.5",
     "axios": "^0.27.2",
     "pinia": "^2.0.20",
     "vue": "^3.2.37",
