--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "app-boilerplate",
-  "version": "0.0.0",
+  "name": "vue-crud-course-code",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 4173",
+    "test:unit": "vitest run --environment jsdom",
+    "test:coverage": "vitest run --environment jsdom --coverage",
+    "test:ui": "vitest --environment jsdom --coverage --ui",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@apollo/client": "^3.5.6",
-    "@vue/apollo-composable": "^4.0.0-alpha.16",
-    "@vue/apollo-util": "^4.0.0-alpha.16",
-    "auth0-js": "^9.18.0",
-    "events": "^3.3.0",
-    "graphql": "^16.2.0",
-    "graphql-tag": "^2.12.6",
-    "subscriptions-transport-ws": "^0.11.0",
-    "vue": "^3.2.25",
-    "vue-router": "^4.0.12"
+    "@vue/apollo-composable": "^4.0.0-beta.5",
+    "axios": "^0.27.2",
+    "pinia": "^2.0.20",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.0.0",
-    "autoprefixer": "^9",
-    "vite": "^2.7.2",
-    "vite-plugin-pages": "^0.19.8"
+    "@pinia/testing": "^0.0.14",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "@vue/test-utils": "^2.0.2",
+    "axios-mock-adapter": "^1.21.1",
+    "c8": "^7.12.0",
+    "eslint": "^8.5.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "jsdom": "^20.0.0",
+    "vite": "^3.0.1",
+    "vitest": "^0.18.1"
   }
 }
