--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "vue-crud-course-code",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
+    "serve": "concurrently \"npm run dev:vite\" \"npm run dev:proxy\"",
+    "dev:vite": "vite",
+    "dev:proxy": "node proxy.js",
     "build": "vite build",
     "preview": "vite preview --port 4173",
     "test:unit": "vitest run --environment jsdom",
@@ -13,6 +15,7 @@
   "dependencies": {
     "@vue/apollo-composable": "^4.0.0-beta.5",
     "axios": "^0.27.2",
+    "express": "^4.18.2",
     "pinia": "^2.0.20",
     "vue": "^3.2.37",
     "vue-router": "^4.1.4"
@@ -23,6 +26,7 @@
     "@vue/test-utils": "^2.0.2",
     "axios-mock-adapter": "^1.21.1",
     "c8": "^7.12.0",
+    "concurrently": "^8.2.0",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
     "jsdom": "^20.0.0",
