--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios-mock-adapter": "^1.21.1",
     "c8": "^7.12.0",
     "concurrently": "^8.2.0",
+    "cors": "^2.8.5",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
     "jsdom": "^20.0.0",
