--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@vue/cli-service": "~5.0.0",
     "cors": "^2.8.5",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+
+    "vue-styleguidist": "^4.72.4",
+    "webpack": "^5.87.0"
   },
   "eslintConfig": {
     "root": true,
