--- a/package.json
+++ b/package.json
@@ -1,37 +1,29 @@
 {
-  "name": "vue-crud-course-code",
-  "version": "1.0.0",
+  "name": "vue_sidebar_menu",
+  "author": "Morteza Jamshidi <devmor.j@gmail.com>",
+  "private": true,
+  "version": "0.3.0",
   "scripts": {
-    "serve": "concurrently \"npm run dev:vite\" \"npm run dev:proxy\"",
-    "dev:vite": "vite",
-    "dev:proxy": "node proxy.js",
-    "build": "vite build",
-    "preview": "vite preview --port 4173",
-    "test:unit": "vitest run --environment jsdom",
-    "test:coverage": "vitest run --environment jsdom --coverage",
-    "test:ui": "vitest --environment jsdom --coverage --ui",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@vue/apollo-composable": "^4.0.0-beta.5",
-    "axios": "^0.27.2",
-    "express": "^4.18.2",
-    "pinia": "^2.0.20",
+    "@vue/apollo-composable": "^4.0.0-beta.7",
+    "apollo-client": "^2.6.10",
+    "graphql": "^15.8.0",
+    "the-new-css-reset": "^1.6.1",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.4"
+    "vue-apollo": "^3.1.0",
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
-    "@pinia/testing": "^0.0.14",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@vue/test-utils": "^2.0.2",
-    "axios-mock-adapter": "^1.21.1",
-    "c8": "^7.12.0",
-    "concurrently": "^8.2.0",
-    "cors": "^2.8.5",
-    "eslint": "^8.5.0",
-    "eslint-plugin-vue": "^9.0.0",
-    "jsdom": "^20.0.0",
-    "vite": "^3.0.1",
-    "vitest": "^0.18.1"
+    "@types/graphql": "^14.5.0",
+    "@types/node": "^17.0.42",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "sass": "^1.52.3",
+    "typescript": "^4.7.3",
+    "vite": "^2.9.12",
+    "vue-tsc": "^0.37.3"
   }
 }
